[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

# ===
[project]
authors = [{name="Nicholas de Jong", email="ndejong@threatpatrols.com"}]
classifiers = [
    "Topic :: Security",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "pyyaml>=5.0"   # https://pypi.org/project/pyyaml/#history
]
description = "Powerful helper utility to create shell alias commands to easily set collections of environment variables often with secret values from a variety of data-sources and data-formats."
license = {text = "BSD-2-Clause" }
name = "env-alias"
requires-python = ">=3.8,<4"
version = "0.5.3"
readme = "README.md"
keywords = ["env-alias", "shell", "env", "alias", "bash"]

[project.scripts]
env-alias = "env_alias.main:entrypoint"

[project.urls]
Documentation = "https://threatpatrols.github.io/env-alias/"
Homepage = "https://github.com/threatpatrols/env-alias"
Repository = "https://github.com/threatpatrols/env-alias.git"
"Bug Tracker" = "https://github.com/threatpatrols/env-alias/issues"

# ===
[tool.slap]
typed = true
release.branch = "dev"

[tool.slap.test]
check = "slap check"
mypy = "dmypy run src"
pytest = "pytest tests/ -vv"
ruff-format = "ruff format --check"
ruff-lint = "ruff check"

[tool.slap.run]
format = "ruff format ."
check-prereqs = """set -e; \
    uv --help > /dev/null || (echo 'Failed uv prereq!' && exit 1); \
    pdm --help > /dev/null || (echo 'Failed pdm prereq!' && exit 1); \
    flit --help > /dev/null || (echo 'Failed flit prereq!' && exit 1); \
    echo "Prereqs okay."
"""
docs-dev = """set -e; \
    cd docs \
    && touch uv.lock \
    && uv run --active -- bash -xc 'mkdocs serve'
"""
docs-build = """set -e; \
    cd docs \
    && uv run --active -- bash -xc 'mkdocs build'
"""
package-build = """set -e; \
    slap release --validate \
    && slap test \
    && slap publish --dry --build-directory ./dist
"""


# ===
[tool.mypy]
pretty = true
explicit_package_bases = true
ignore_missing_imports = true
mypy_path = ["src"]
namespace_packages = true
pretty = true
python_version = "3.8"
show_error_codes = true
show_error_context = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true


# ===
[tool.uv]
dev-dependencies = [
  "ruff",
  "pytest",
  "mypy",
  "types-aiofiles",
  "types-PyYAML",
]


# ===
[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501"]  # E501 line too long (151 > 120 characters) - https://www.flake8rules.com/rules/E501.html

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["F401"]  # F401 module imported but unused
"src/env_alias/main.py" = ["W293", "W291"]  # W293 blank line contains whitespace; W291 trailing whitespace
