[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

# project
# ===
[project]
name = "env-alias"
license = {text = "BSD-2-Clause" }
authors = [{name="Nicholas de Jong", email="ndejong@threatpatrols.com"}]
description = "Powerful helper utility to create shell alias commands to easily set collections of environment variables often with secret values from a variety of data-sources and data-formats."
version = "0.5.3"
readme = "README.md"
requires-python = ">=3.8,<4"
keywords = ["env-alias", "shell", "env", "alias", "bash"]
classifiers = [
    "Topic :: Security",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "pyyaml>=5.0"   # https://pypi.org/project/pyyaml/#history
]

[project.scripts]
env-alias = "env_alias.main:entrypoint"

[project.urls]
Documentation = "https://threatpatrols.github.io/env-alias/"
Homepage = "https://github.com/threatpatrols/env-alias"
Repository = "https://github.com/threatpatrols/env-alias.git"
"Bug Tracker" = "https://github.com/threatpatrols/env-alias/issues"


# slap-cli
# ===
[tool.slap]
typed = true
release.branch = "dev"

[tool.slap.test]
check = "slap check"
mypy = "dmypy run src"
pytest = "pytest tests/ -vv"
ruff-format = "ruff format --check"
ruff-lint = "ruff check"

[tool.slap.run]
format = "ruff format ."
check-prereqs = """set -e; \
    uv --help > /dev/null || (echo 'Failed uv prereq!' && exit 1); \
    pdm --help > /dev/null || (echo 'Failed pdm prereq!' && exit 1); \
    flit --help > /dev/null || (echo 'Failed flit prereq!' && exit 1); \
    echo "Prereqs okay."
"""
docs-dev = """set -e; \
    cd docs \
    && touch uv.lock \
    && uv run --active -- bash -xc 'mkdocs serve'
"""
docs-build = """set -e; \
    cd docs \
    && uv run --active -- bash -xc 'mkdocs build'
"""
package-build = """set -e; \
    slap release --validate \
    && slap test \
    && slap publish --dry --build-directory ./dist
"""


# mypy
# ===
[tool.mypy]
pretty = true
warn_redundant_casts = true
#warn_unused_ignores = true
namespace_packages = true
show_error_codes = true
show_error_context = true
warn_no_return = true
warn_unreachable = true


# uv
# ===
[tool.uv]
dev-dependencies = [
  "ruff",
  "pytest",
  "mypy",
  "types-aiofiles",
  "types-PyYAML",
]


# ruff
# ===
[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501"]  # E501 line too long (151 > 120 characters) - https://www.flake8rules.com/rules/E501.html

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["F401"]  # F401 module imported but unused
"src/env_alias/main.py" = ["W293", "W291"]  # W293 blank line contains whitespace; W291 trailing whitespace
